--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongoose": "^7.3.0",
+    "mongoose-update-if-current": "^1.4.0",
     "winston": "^3.9.0"
   },
   "devDependencies": {
